<resources>
    <string name="app_name">Attend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATTENDANCE MANAGEMENT SYSTEM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_student">Student</string>
    <string name="menu_students">Students</string>
    <string name="menu_lecturer">Lecturer</string>
    <string name="menu_course">Course</string>
    <string name="view_attendance">View Attendance</string>
    <string name="change_password">Change Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="attendance_management_system">ATTENDANCE MANAGEMENT SYSTEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact Number</string>
    <string name="mat_no">Matric Number</string>
    <string name="select_course">Select Course:</string>
    <string name="add_student">Add Student</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="add_course">Add Course</string>
    <string name="add_lecturer">Add Lecturer</string>
    <string name="attendance">Attendance</string>
    <string name="action_logout">Logout</string>
    <string name="home">Home</string>
    <string name="title_activity_lecturer">LecturerActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="get_student">Get Student</string>
    <string name="phone">Phone:</string>
    <string name="submit">Submit</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="excused">Excused</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="fire">Fire</string>
    <string name="download">Download</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="prompt_info_title">Fingerprint Authentication</string>
    <string name="prompt_info_description">App requires fingerprint to continue</string>
    <string name="dismiss">dismiss</string>
    <string name="add_students">Add Students</string>
    <string name="prompt_search_doc">Press Button to find doc</string>
    <string name="canceled">Canceled!!</string>

</resources>