<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:id="@+id/home">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/home" />
        </group>

        <group android:id="@+id/students">
            <item
                android:id="@+id/nav_lecturer_students"
                android:icon="@drawable/ic_baseline_people_24"
                android:title="@string/menu_students" />
        </group>

        <group android:id="@+id/take_attendance">
            <item
                android:id="@+id/nav_take_attendance"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/take_attendance" />
        </group>

        <group android:id="@+id/view_attendance">
            <item
                android:id="@+id/nav_view_attendance"
                android:icon="@drawable/ic_baseline_event_note_24"
                android:title="@string/view_attendance" />
        </group>

        <group android:id="@+id/change_password">
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_baseline_vpn_key_24"
                android:title="@string/change_password"/>
        </group>

        <group android:id="@+id/logout">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_call_missed_outgoing_24"
                android:title="@string/action_logout"/>
        </group>
    </group>
</menu>