<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:id="@+id/student">
            <item
                android:id="@+id/nav_student"
                android:icon="@drawable/ic_baseline_people_24"
                android:title="@string/menu_student" />
        </group>

        <group android:id="@+id/lecturer">
            <item
                android:id="@+id/nav_lecturer"
                android:icon="@drawable/ic_outline_emoji_people_24"
                android:title="@string/menu_lecturer" />
        </group>

        <group android:id="@+id/course">
            <item
                android:id="@+id/nav_course"
                android:icon="@drawable/ic_baseline_library_books_24"
                android:title="@string/menu_course" />
        </group>

        <group android:id="@+id/attendance">
            <item
                android:id="@+id/nav_attendance"
                android:icon="@drawable/ic_baseline_event_note_24"
                android:title="@string/attendance" />
        </group>

        <group android:id="@+id/logout">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_call_missed_outgoing_24"
                android:title="@string/action_logout"/>
        </group>
    </group>
</menu>