<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="student"
            type="com.example.attend.data.model.Student" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        android:elevation="12dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_student_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    tools:text="Student"
                    android:text="@{student.firstName}"
                    android:textColor="@color/logoBlue"
                    android:textSize="@dimen/student_name_size"
                    android:layout_marginRight="8dp" />
                <TextView
                    android:id="@+id/txt_student_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Name"
                    android:text="@{student.lastName}"
                    android:textColor="@color/logoBlue"
                    android:textSize="@dimen/student_name_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rdgrp_status"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="match_parent">
                    <RadioButton
                        android:id="@+id/rdbtn_present"
                        android:text="@string/present"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/rdbtn_absent"
                        android:text="@string/absent"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/rdbtn_excused"
                        android:text="@string/excused"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>